--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				</div>
 						
-						<h1 id="text03">Harshit Pandey</h1>
+						<h1 href="https://harshitpandey0000.github.io/" id="text03">Harshit Pandey</h1>
 						<hr id="divider02" />
 						<p id="text04">Coder  •  Gamer  •  Meditator  •  Leader</p>
 					</section>
