--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="inner">
 					<header id="header">
 						<ul class="icons" id="icons01" align="center" class="socialbtns">
-							<li><a href="MyResume.pdf" class="n04 fa fa-lg fa-file-text"></a></li>
+							<li><a href="resume.pdf" class="n04 fa fa-lg fa-file-text"></a></li>
 							<li><a href="https://github.com/harshitpandey0000" class="n01 fa fa-lg fa-github"></a></li>
 							<li><a href="https://www.linkedin.com/in/harshit-pandey-066619229/" class="n02 fa fa-lg fa-linkedin"></a></li>
 							<li><a href="mailto:harshitpandey0000@gmail.com" class="n03 fa fa-lg fa-envelope"></a></li>
